# santoriniCpp2025

./: CMakeLists.txt
.github/workflows/: main.yml
src/: board.cpp  board.h  constants.h  evaluation.h  killer_moves.h  main.cpp  move.h  moves.cpp  moves.h  run.h  search.h  transposition_table.h
tests/: test_climber_quiet.cpp  test_evaluation.cpp  test_general_rules.cpp  test_hashing.cpp  test_helpers.h  test_parsing.cpp  test_transposition_table.cpp  test_unmake_move_tests.cpp  test_validation.cpp
tests/godSpecific/: test_apollo.cpp  test_artemis.cpp  test_athena.cpp  test_atlas.cpp  test_demeter.cpp  test_hephaestus.cpp  test_hermes.cpp  test_minotaur.cpp  test_pan.cpp  test_prometheus.cpp
